Fix lang selector not showing

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -14,7 +14,7 @@
 		text-align: right;
 	}
 
-	.languageSelectorLabel {
+	.languageSelector span {
 		display:none;
 	}
 
